Fix cut off sentence, remove margin bottom from nested lists, correct margins for blockquotes

--- a/assets/stylesheets/framework/_typography.scss
+++ b/assets/stylesheets/framework/_typography.scss
@@ -46,8 +46,12 @@ a {
   }
 
   ul, ol { @include type-scale(0, 1.5, 3) };
+  li + ol, li + ul { margin-bottom: 0; };
 
   blockquote {
+    @include type-scale(0, 1.5, 3);
+    margin-left: $gl-spacing-5;
+    margin-right: $gl-spacing-5;
     background: $gray-50;
     border-left: ($border-width * 2) solid $border-color;
     padding: $gl-spacing-5;
